updated profile page

--- a/src/main/webapp/app/menu/profile/profile.component.html
+++ b/src/main/webapp/app/menu/profile/profile.component.html
@@ -24,9 +24,12 @@
   <div class="pBox f2Pos"></div>
   <div class="pBox f3Pos"></div>
   <p class="fontDesign tPos1">Top Song For You</p>
-  <div class="pBox f4Pos"></div>
-  <div class="pBox f5Pos"></div>
-  <div class="pBox f6Pos"></div>
+  <div class="pBox f4Pos" id="track2"></div>
+  <div class="pBox f5Pos" id="track1"></div>
+  <div class="pBox f6Pos" id="track3"></div>
+  <p class="numb1" id="topTrack1"></p>
+  <p class="numb2" id="topTrack2"></p>
+  <p class="numb3" id="topTrack3"></p>
 </div>
 
 <!-- Second line For Navigation to Disliked Song Page-->
@@ -41,11 +44,15 @@
 
   <!-- Artist Container-->
   <p class="fontDesign tPos2">Top Artist For You</p>
-  <div class="pBox f4Pos"></div>
+  <div class="pBox f4Pos" id="topImage3"></div>
 
-  <div class="pBox f5Pos"></div>
+  <div class="pBox f5Pos" id="topImage1"></div>
 
-  <div class="pBox f6Pos"></div>
+  <div class="pBox f6Pos" id="topImage2"></div>
+
+  <p class="numb1" id="topArtist1"></p>
+  <p class="number2" id="topArtist2"></p>
+  <p class="numb3" id="topArtist3"></p>
 </div>
 
 <!-- Charts -->
@@ -58,6 +65,6 @@
 
   <div class="songChart">
     <p class="sLetter">Favorite Song</p>
-    <canvas id="genreChart"></canvas>
+    <canvas id="myChart1"></canvas>
   </div>
 </div>
