--- a/src/main/webapp/app/menu/profile/profile.component.scss
+++ b/src/main/webapp/app/menu/profile/profile.component.scss
@@ -229,3 +229,37 @@
   top: 20%;
   left: 10px;
 }
+
+.numb1 {
+  font-weight: bold;
+  width: fit-content;
+  text-align: center;
+  position: absolute;
+  top: 325%;
+  right: 20%;
+}
+
+.numb2 {
+  font-weight: bold;
+  width: fit-content;
+  text-align: center;
+  position: absolute;
+  top: 320%;
+  right: 39%;
+}
+
+.numb3 {
+  font-weight: bold;
+  width: fit-content;
+  position: absolute;
+  top: 320%;
+  right: 2%;
+}
+.number2 {
+  font-weight: bold;
+  width: fit-content;
+  text-align: center;
+  position: absolute;
+  top: 320%;
+  right: 37%;
+}
