Keyboard Controlling on Main Pages, update main-page.component.ts - added a new method handleKeyPress & toggleActiveButton - this is just a temporary version

--- a/src/main/webapp/app/menu/main-page/main-page.component.scss
+++ b/src/main/webapp/app/menu/main-page/main-page.component.scss
@@ -39,6 +39,11 @@
   }
 }
 
+.round-button.active {
+  background-color: var(--text-color);
+  color: var(--background-color);
+}
+
 .top-middle {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
