--- a/src/main/webapp/app/menu/settings/settings.component.scss
+++ b/src/main/webapp/app/menu/settings/settings.component.scss
@@ -3,6 +3,7 @@ body,
 section {
   margin: 0;
   padding: 0;
+  background-color: var(--background-color);
 }
 
 /* add black line between each section */
