Updating keyboard controlling feature in Main Page -it is working now -it is so hard to tell, but if you check the console inside the inspect mode, you can see some printed message there -TO DO: make it clearer when buttons are clicked

--- a/src/main/webapp/app/menu/main-page/main-page.component.html
+++ b/src/main/webapp/app/menu/main-page/main-page.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="top-row">
     <div class="top-left">
-      <button class="round-button like-dislike" id="like-button">Like</button>
+      <button class="round-button like-dislike" id="like-button" (click)="likePressed()">Like</button>
     </div>
     <div *ngIf="dataLoaded | async">
       <div class="top-middle">
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="top-right">
-      <button class="round-button like-dislike" id="dislike-button">Dislike</button>
+      <button class="round-button like-dislike" id="dislike-button" (click)="dislikePressed()">Dislike</button>
     </div>
   </div>
 
