--- a/src/main/webapp/app/menu/main-page/main-page.component.scss
+++ b/src/main/webapp/app/menu/main-page/main-page.component.scss
@@ -44,6 +44,11 @@
   color: var(--background-color);
 }
 
+.round-button.pressed {
+  box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.2);
+  transform: translateY(4px);
+}
+
 .top-middle {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
@@ -108,6 +113,7 @@ h3 {
   border-radius: 25px;
   cursor: pointer;
   font-size: 16px;
+
   &:hover {
     background-color: white;
     color: black;
