updated done profile page

--- a/src/main/webapp/app/menu/profile/profile.component.scss
+++ b/src/main/webapp/app/menu/profile/profile.component.scss
@@ -263,3 +263,33 @@
   top: 320%;
   right: 37%;
 }
+
+.al1 {
+  font-weight: bold;
+  width: fit-content;
+  color: black;
+  text-align: center;
+  position: absolute;
+  top: 100%;
+  right: 20%;
+}
+
+.al2 {
+  font-weight: bold;
+  width: fit-content;
+  color: black;
+  text-align: center;
+  position: absolute;
+  top: 100%;
+  right: 39%;
+}
+
+.al3 {
+  font-weight: bold;
+  width: fit-content;
+  color: black;
+  text-align: center;
+  position: absolute;
+  top: 100%;
+  right: 2%;
+}
