--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -4,7 +4,8 @@
       <h1 jhiTranslate="register.title" data-cy="registerTitle">Registration</h1>
 
       <div class="alert alert-success" *ngIf="success" jhiTranslate="register.messages.success">
-        <strong>Registration saved!</strong> Please check your email for confirmation.
+        <!--        <strong>Registration saved!</strong> Please check your email for confirmation.-->
+        <strong>Registration saved!</strong>Please sign in with your new details
       </div>
 
       <div class="alert alert-danger" *ngIf="error" jhiTranslate="register.messages.error.fail">
