--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -6,13 +6,12 @@
 
     <div [ngSwitch]="account !== null">
       <div class="alert alert-success" *ngSwitchCase="true">
-        <span id="home-logged-message" *ngIf="account" jhiTranslate="home.logged.message" [translateValues]="{ username: account.login }"
-          >You are logged in as user "{{ account.login }}".</span
-        >
+        <span id="home-logged-message" *ngIf="account">You are logged in as {{ account.login }}.</span>
       </div>
 
       <div *ngSwitchCase="true" id="tutorial-text">
         <p>Select playlists from the initial training page to help improve the recommendation algorithm</p>
+        <p>This app is still in it's early stages of development, this means that only approved Spotify accounts will work</p>
       </div>
 
       <div class="alert alert-warning" *ngSwitchCase="false">
