--- a/src/main/webapp/app/menu/main-page/main-page.component.html
+++ b/src/main/webapp/app/menu/main-page/main-page.component.html
@@ -8,7 +8,8 @@
     </div>
     <div *ngIf="dataLoaded | async">
       <div class="top-middle">
-        <img src="{{ outImage }}" alt="Music Cover" style="width: 300px; height: 300px" />
+        <!--<img src="music-cover.jpg" alt="Music Cover" style="width: 300px; height: 300px" />-->
+        <div id="musicCover"></div>
         <!--this should be modified as a parameter, the music cover should be taken from Spotify-->
       </div>
     </div>
@@ -28,8 +29,10 @@
     <div class="bottom-left"></div>
     <div *ngIf="dataLoaded | async">
       <div class="bottom-middle">
-        <h2>{{ outTitle }}</h2>
-        <h3>{{ outArtist }}</h3>
+        <!--<h2>{{ outTitle }}</h2>-->
+        <div id="title"></div>
+        <!--<h3>{{ outArtist }}</h3>-->
+        <div id="artists"></div>
         <audio controls autoplay>
           <source src="{{ outPreview }}" type="audio/mpeg" />
           The preview is not working.
