Ben live song preview

--- a/src/main/webapp/app/menu/main-page/main-page.component.html
+++ b/src/main/webapp/app/menu/main-page/main-page.component.html
@@ -33,10 +33,11 @@
         <div id="title"></div>
         <!--<h3>{{ outArtist }}</h3>-->
         <div id="artists"></div>
-        <audio controls autoplay>
+        <!--<audio controls autoplay>
           <source src="{{ outPreview }}" type="audio/mpeg" />
           The preview is not working.
-        </audio>
+        </audio>-->
+        <div id="previewUrl"></div>
       </div>
     </div>
     <div class="bottom-right">
