--- a/src/main/webapp/app/menu/main-page/main-page.component.scss
+++ b/src/main/webapp/app/menu/main-page/main-page.component.scss
@@ -22,6 +22,17 @@
   background-color: var(--background-color);
 }
 
+.title1 {
+  position: relative;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.title2 {
+  position: relative;
+  font-size: 20px;
+}
+
 .round-button {
   width: 150px;
   height: 150px;
@@ -56,6 +67,7 @@
   justify-content: center;
   align-items: center;
   background-color: var(--background-color);
+  flex-direction: column;
 }
 
 img {
