--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -21,6 +21,9 @@ h4 {
   --third-color: #050a30;
   --border-color: #333;
   --initial-training-background-color: #c7fdff;
+  --likesong-color: #f2f2f2;
+  --blacktowhite-color: #c7fdff;
+  --lightgreytoblack-color: #d3d3d3;
 }
 
 body {
