--- a/src/main/webapp/app/initial-training/initial-training.component.scss
+++ b/src/main/webapp/app/initial-training/initial-training.component.scss
@@ -85,6 +85,7 @@ body {
   top: 0;
   left: 30px;
   float: left;
+  background-color: var(--background-color);
 }
 .select-item {
   position: relative;
@@ -156,7 +157,7 @@ div {
   display: flex;
   flex-direction: row;
   align-items: center;
-  background-color: white;
+  background-color: var(--background-color);
   margin: 5px;
   border-radius: 5px;
 }
