--- a/src/main/webapp/app/menu/profile/profile.component.scss
+++ b/src/main/webapp/app/menu/profile/profile.component.scss
@@ -1,5 +1,5 @@
 .horizontal {
-  border-left: 3px solid black;
+  border-left: 3px solid var(--text-color);
   height: 100%;
   position: absolute;
   left: 50%;
@@ -8,7 +8,7 @@
 }
 
 .vertical {
-  border-top: 3px solid black;
+  border-top: 3px solid var(--text-color);
   width: 100%;
   position: absolute;
   top: 30%;
@@ -16,8 +16,12 @@
   left: 0;
 }
 
+.label {
+  color: var(--text-color);
+}
+
 .vertical2 {
-  border-top: 3px solid black;
+  border-top: 3px solid var(--text-color);
   width: 100%;
   position: absolute;
   top: 70%;
@@ -65,7 +69,7 @@
   float: left;
   position: relative;
   border-radius: 4px;
-  color: black;
+  color: var(--text-color);
   padding: 5px;
   margin: 20px;
 }
@@ -73,7 +77,7 @@
 .uPBox {
   display: inline-block;
   border-radius: 10px;
-  color: black;
+  color: var(--text-color);
 }
 
 .eButton {
@@ -267,7 +271,7 @@
 .al1 {
   font-weight: bold;
   width: fit-content;
-  color: black;
+  color: var(--text-color);
   text-align: center;
   position: absolute;
   top: 100%;
@@ -277,7 +281,7 @@
 .al2 {
   font-weight: bold;
   width: fit-content;
-  color: black;
+  color: var(--text-color);
   text-align: center;
   position: absolute;
   top: 100%;
@@ -287,7 +291,7 @@
 .al3 {
   font-weight: bold;
   width: fit-content;
-  color: black;
+  color: var(--text-color);
   text-align: center;
   position: absolute;
   top: 100%;
