--- a/src/main/webapp/app/initial-training/initial-training.component.scss
+++ b/src/main/webapp/app/initial-training/initial-training.component.scss
@@ -64,7 +64,7 @@
 }
 body {
   font-family: 'Open Sans';
-  background: white;
+  background: var(--lightgreytoblack-color);
   color: #ecf0f1;
   line-height: 1.618em;
 }
