--- a/src/main/webapp/app/menu/liked-songs/liked-songs.component.scss
+++ b/src/main/webapp/app/menu/liked-songs/liked-songs.component.scss
@@ -10,6 +10,7 @@ body {
 h2 {
   text-align: center;
   font-size: 2rem;
+  font-weight: bold;
   padding: 10px 0;
   margin-bottom: 0.5rem;
   border-bottom: 1px solid black;
@@ -29,9 +30,10 @@ h2 {
 .scrollable-table {
   max-height: 500px; /* Adjust the value */
   overflow-y: auto;
+  background-color: var(--like-song-color);
 }
 .song-table tbody tr:nth-child(even) {
-  background-color: #f2f2f2; /* Light gray close to white */
+  background-color: var(--like-song-color); /* Light gray close to white */
 }
 
 .song-list-item {
@@ -51,6 +53,7 @@ h2 {
 .song-item {
   line-height: 1.5;
   padding: 0;
+  background-color: var(--background-color);
 }
 
 .song-info {
@@ -58,6 +61,7 @@ h2 {
   flex-direction: row;
   flex-grow: 1;
   align-items: center;
+  color: var(--text-color);
 }
 
 .song-info > div {
@@ -68,22 +72,26 @@ h2 {
   width: 30%;
   font-weight: bold;
   text-align: left;
+  color: var(--text-color);
 }
 
 .song-info-time {
   width: 10%;
   text-align: center;
+  color: var(--text-color);
 }
 .song-info-artist,
 .song-info-album,
 .song-info-genre {
   width: 15%;
   text-align: left;
+  color: var(--text-color);
 }
 .song-table {
   width: 100%;
   border-collapse: collapse;
   color: black;
+  background-color: var(--lightgreytoblack-color);
 }
 
 .song-table th,
@@ -105,14 +113,14 @@ h2 {
 }
 
 .play-button {
-  color: #0d122b;
+  color: var(--playbutton-color);
   font-size: 24px; // Increase the font size to make the icon bigger
   cursor: pointer;
   margin-right: 20px;
 }
 
 .add-to-disliked-songs-button {
-  color: #0d122b;
+  color: var(--playbutton-color);
   font-size: 24px; // Increase the font size to make the icon bigger
   cursor: pointer;
   margin-right: 10px;
@@ -120,11 +128,11 @@ h2 {
 }
 
 .play-button:hover {
-  color: blue;
+  color: var(--playbutton2-color);
 }
 
 .add-to-disliked-songs-button:hover {
-  color: blue;
+  color: var(--playbutton2-color);
 }
 
 .now-playing {
@@ -132,7 +140,7 @@ h2 {
   bottom: 20px; /* Adjust this value to change the distance from the bottom */
   left: 50%;
   transform: translateX(-50%);
-  background-color: #fff;
+  background-color: var(--blacktowhite-color);
   border-radius: 10px;
   padding: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
