--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -24,6 +24,10 @@ h4 {
   --likesong-color: #f2f2f2;
   --blacktowhite-color: #c7fdff;
   --lightgreytoblack-color: #d3d3d3;
+  --like-song-color: #d3d3d3;
+  --completewhite: #ffffff;
+  --playbutton-color: #0d122b;
+  --playbutton2-color: blue;
 }
 
 body {
