--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -28,6 +28,8 @@ h4 {
   --completewhite: #ffffff;
   --playbutton-color: #0d122b;
   --playbutton2-color: blue;
+  --link-to-gdpr-color: #533f03;
+  --link-to-gdpr-color2: #ff0000;
 }
 
 body {
@@ -37,12 +39,12 @@ body {
 
 /* Increase contrast of links to get 100% on Lighthouse Accessability Audit. Override this color if you want to change the link color, or use a Bootswatch theme */
 a {
-  color: #533f03;
+  color: var(--link-to-gdpr-color);
   font-weight: bold;
 }
 
 a:hover {
-  color: #533f03;
+  color: var(--link-to-gdpr-color2);
 }
 
 /* override hover color for dropdown-item forced by bootstrap to all a:not([href]):not([tabindex]) elements in _reboot.scss */
