--- a/src/main/webapp/app/menu/main-page/main-page.component.scss
+++ b/src/main/webapp/app/menu/main-page/main-page.component.scss
@@ -26,11 +26,13 @@
   position: relative;
   font-size: 40px;
   font-weight: bold;
+  text-align: center;
 }
 
 .title2 {
   position: relative;
   font-size: 20px;
+  text-align: center;
 }
 
 .round-button {
