Ben main page buttons

--- a/src/main/webapp/app/menu/main-page/main-page.component.html
+++ b/src/main/webapp/app/menu/main-page/main-page.component.html
@@ -8,8 +8,8 @@
     </div>
     <div *ngIf="dataLoaded | async">
       <div class="top-middle">
-        <!--<img src="music-cover.jpg" alt="Music Cover" style="width: 300px; height: 300px" />-->
-        <div id="musicCover"></div>
+        <img src="{{ outImage }}" alt="Music Cover" style="width: 300px; height: 300px" />
+        <!--<div id="musicCover"></div>-->
         <div class="title1" id="title"></div>
         <div class="title2" id="artists"></div>
 
