initial training styling

--- a/src/main/webapp/app/initial-training/initial-training.component.html
+++ b/src/main/webapp/app/initial-training/initial-training.component.html
@@ -59,6 +59,10 @@
                 </label>
               </div>
             </div>
+            <div class="info-container">
+              <br />
+              <p>Select playlists, songs and genres that you want to get recommendations for</p>
+            </div>
           </div>
           <div id="spotify-container" class="button-container">
             <a>
