Ben main page audio overlay fixed

--- a/src/main/webapp/app/menu/main-page/main-page.component.html
+++ b/src/main/webapp/app/menu/main-page/main-page.component.html
@@ -34,10 +34,12 @@
       <div class="bottom-middle">
         <!--<h2>{{ outTitle }}</h2>-->
         <!--<h3>{{ outArtist }}</h3>-->
-        <!--<audio controls autoplay>
-          <source src="{{ outPreview }}" type="audio/mpeg" />
-          The preview is not working.
-        </audio>-->
+        <!--        <audio controls autoplay>-->
+        <!--          <source src="{{outPreview}}" type="audio/mpeg" />-->
+        <!--          The preview is not working.-->
+        <!--        </audio>-->
+        <!--        <video controls="" autoplay="" name="media">-->
+        <!--          <source src="{{outPreview}}" type="audio/mpeg"></video>-->
         <div id="previewUrl"></div>
       </div>
     </div>
