--- a/src/main/webapp/app/menu/liked-songs/liked-songs.component.html
+++ b/src/main/webapp/app/menu/liked-songs/liked-songs.component.html
@@ -20,7 +20,7 @@
         <!-- make it scrollable-->
         <table class="song-table">
           <tbody>
-            <ng-container *ngFor="let song of getSongInfoArray()">
+            <ng-container *ngFor="let song of getSongInfoArray(); let i = index">
               <tr class="song-item">
                 <td class="song-info-title">{{ song.title }}</td>
                 <td class="song-info-time">{{ song.time }}</td>
@@ -28,8 +28,8 @@
                 <td class="song-info-album">{{ song.album }}</td>
                 <td class="song-info-genre">{{ song.genre }}</td>
                 <td class="song-actions">
-                  <i class="fas fa-play-circle play-button" *ngIf="!isPlaying(song)" (click)="onPlayButtonClick(song)"></i>
-                  <i class="fas fa-stop-circle play-button" *ngIf="isPlaying(song)" (click)="onPlayButtonClick(song)"></i>
+                  <i class="fas fa-play-circle play-button" *ngIf="!isPlaying(i)" (click)="onPlayButtonClick(i)"></i>
+                  <i class="fas fa-stop-circle play-button" *ngIf="isPlaying(i)" (click)="onPlayButtonClick(i)"></i>
                   <div class="heart-container">
                     <i class="fa-solid fa-heart-crack add-to-disliked-songs-button" (click)="onAddToDislikedSongsButtonClick(song)"> </i>
                   </div>
@@ -46,8 +46,8 @@
   <div class="song-info">
     <img class="song-image" src="https://via.placeholder.com/60" alt="Album Art" />
     <div class="song-details">
-      <p class="song-title">{{ currentSong.songName }}</p>
-      <p class="song-artist">{{ currentSong.artistName }}</p>
+      <p class="song-title">{{ currentSong.title }}</p>
+      <p class="song-artist">{{ currentSong.artist }}</p>
     </div>
   </div>
   <div class="song-popup-actions">
