--- a/src/main/webapp/app/menu/disliked-songs/disliked-songs.component.html
+++ b/src/main/webapp/app/menu/disliked-songs/disliked-songs.component.html
@@ -4,14 +4,14 @@
     <div class="table-header">
       <table class="song-table">
         <thead>
-        <tr>
-          <th class="song-info-title">Title</th>
-          <th class="song-info-time">Time</th>
-          <th class="song-info-artist">Artist</th>
-          <th class="song-info-album">Album</th>
-          <th class="song-info-genre">Genre</th>
-          <th class="song-actions">Actions</th>
-        </tr>
+          <tr>
+            <th class="song-info-title">Title</th>
+            <th class="song-info-time">Time</th>
+            <th class="song-info-artist">Artist</th>
+            <th class="song-info-album">Album</th>
+            <th class="song-info-genre">Genre</th>
+            <th class="song-actions">Actions</th>
+          </tr>
         </thead>
       </table>
     </div>
@@ -19,22 +19,22 @@
       <div class="scrollable-table">
         <table class="song-table">
           <tbody>
-          <ng-container *ngFor="let song of getSongInfoArray()">
-            <tr class="song-item">
-              <td class="song-info-title">{{ song.title }}</td>
-              <td class="song-info-time">{{ song.time }}</td>
-              <td class="song-info-artist">{{ song.artist }}</td>
-              <td class="song-info-album">{{ song.album }}</td>
-              <td class="song-info-genre">{{ song.genre }}</td>
-              <td class="song-actions">
-                <i class="fas fa-play-circle play-button" *ngIf="!isPlaying(song)" (click)="onPlayButtonClick(song)"></i>
-                <i class="fas fa-stop-circle play-button" *ngIf="isPlaying(song)" (click)="onPlayButtonClick(song)"></i>
-                <div class="heart-container">
-                  <i class="fa-solid fa-heart add-to-liked-songs-button" (click)="onAddToLikedSongsButtonClick(song)"> </i>
-                </div>
-              </td>
-            </tr>
-          </ng-container>
+            <ng-container *ngFor="let song of getSongInfoArray(); let i = index">
+              <tr class="song-item">
+                <td class="song-info-title">{{ song.title }}</td>
+                <td class="song-info-time">{{ song.time }}</td>
+                <td class="song-info-artist">{{ song.artist }}</td>
+                <td class="song-info-album">{{ song.album }}</td>
+                <td class="song-info-genre">{{ song.genre }}</td>
+                <td class="song-actions">
+                  <i class="fas fa-play-circle play-button" *ngIf="!isPlaying(i)" (click)="onPlayButtonClick(i)"></i>
+                  <i class="fas fa-stop-circle play-button" *ngIf="isPlaying(i)" (click)="onPlayButtonClick(i)"></i>
+                  <div class="heart-container">
+                    <i class="fa-solid fa-heart add-to-liked-songs-button" (click)="onAddToLikedSongsButtonClick(song)"> </i>
+                  </div>
+                </td>
+              </tr>
+            </ng-container>
           </tbody>
         </table>
       </div>
@@ -45,7 +45,7 @@
   <div class="song-info">
     <img class="song-image" src="https://via.placeholder.com/60" alt="Album Art" />
     <div class="song-details">
-      <p class="song-title">{{ currentSong.name }}</p>
+      <p class="song-title">{{ currentSong.title }}</p>
       <p class="song-artist">{{ currentSong.artist }}</p>
     </div>
   </div>
